tests/fails/f27.t
require("fail")

terra foo()
    return niltype(8)
end
foo()
